docs improvement and new release.

--- a/notebooks/DSBowl18_segmentation.ipynb
+++ b/notebooks/DSBowl18_segmentation.ipynb
@@ -188,7 +188,9 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -298,13 +300,6 @@
     "    masks_res = res_dc.data[1:]\n",
     "    vis_img_instances(img_res, masks_res)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
