--- a/notebooks/Basics_of_solt.ipynb
+++ b/notebooks/Basics_of_solt.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Basics of **solt**\n",
+    "# Basics of `SOLT`\n",
     "\n",
     "In this short tutorial, you will get to know the core concepts behind the **solt** library and also learn how to implement simple data augmentations by yourself."
    ]
@@ -34,7 +34,7 @@
     "Solt has several main modules: \n",
     "\n",
     "* `base_transforms` - Superclasses and validity checkers\n",
-    "* `core` - Data Streaming classes. The allow to compose transforms into pipelines and serialize them.\n",
+    "* `core` - Data Streaming classes. The allow to compose transforms into pipelines and serialize them\n",
     "* `data` - Data containers (in `SOLT`, all the data need to be packed into specialized containers or dicts)\n",
     "* `transforms` - Transformations (data augmentations)\n",
     "* `utils` - Tools used in the librrary and also serialiation functionality\n",
@@ -59,11 +59,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Typization in data augmentations and DataContainer\n",
+    "## Wrapping the data into containers\n",
     "\n",
-    "Taking look at most of the other libraries, we found one particular disadvantage: the transforms do not understand the data and you need to implement some hacks to deal with it. The best library, which has specialized containers for different datatypes is [imgaug](https://github.com/aleju/imgaug), however it is very slow.\n",
+    "While taking a look at the other libraries, we found one particular disadvantage: the transforms do not understand the data and one needs to implement some hacks to deal with it. The best library that has specialized containers for different datatypes is [imgaug](https://github.com/aleju/imgaug), however, it is very slow.\n",
     "\n",
-    "In `SOLT`, we created a `DataContainer` type, which wraps all your data into a single object. Furthermore, the DataContainer enables a possibility to apply the same transformation to multiple images (e.g. to a minibatch, set of masks in instance segmentations etc.). What is needed is just the data and the specification whether it is an image (`I`), mask (`M`), keypoints (`P`) or labels (`L`). An example of creating the data container is given in the cell below:"
+    "In `SOLT`, we created a `DataContainer` that wraps all your data into a single object. Furthermore, the DataContainer enables a possibility to apply the same transformation to multiple images (e.g. to a minibatch if images, an instance segmentation mask, a set of keypoints). What is needed is just the data and the specification whether it is an image (`I`), mask (`M`), keypoints (`P`) or labels (`L`). An example of creating the data container is given in the cell below:"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "An alternative way of creating data containers is using dictionaries:"
+    "An alternative way of creating data containers is using a dictionary:"
    ]
   },
   {
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When you have multiple data items, use tuple to supply the data to the `DataContainer`'s constructor. The number of elements in the tuple and the length of the format string must match:"
+    "When you have multiple data items, use tuple in `DataContainer` constructor. The number of elements in the tuple and the length of the format string must match:"
    ]
   },
   {
@@ -152,7 +152,7 @@
    "source": [
     "## Handling the keypoints\n",
     "\n",
-    "We found some difficulties when working with the other libraries that support keypoints (landmarks). One solution, which we found benefitial was to create a container for the keypoints, which also contains the information about the coordinate frame where those keypoints are located:"
+    "We found some difficulties when working with the other libraries that support keypoints (landmarks). One solution was to create a dedicated container for keypoints, which stores the information about the coordinate frame where those keypoints are located:"
    ]
   },
   {
@@ -173,16 +173,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please note, that there is no keypoint-specific `dict` API yet for keypoints"
+    "Please, note that there is no keypoint-specific `dict` API yet."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sending the data through the transformations\n",
+    "## Applying `SOLT` transforms\n",
     "\n",
-    "In `SOLT`, we implemented a large variety of transformations. We always to suggest to use a `Stream` to perform the data augmentations. Let us define a simple stream, which has only one transform  - `Flip`. This transform's expected behaviour is to flip the data around the given axis. Let's perform a horizontal flip:"
+    "In `SOLT`, we implemented a large variety of transformations. We recommend to always use a `Stream` to perform the data augmentations. Let us define a simple stream with only one transform  - `Flip`. This transform will flip the data around the given axis:"
    ]
   },
   {
@@ -209,7 +209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plese, not that the image must always have a channel dimension\n",
+    "# Plese, note that the image must always have a channel dimension\n",
     "test_img_4 = np.array([[0, 0, 1],\n",
     "                       [0, 0, 1],\n",
     "                       [0, 0, 1]]).reshape(3, 3, 1)\n",
@@ -226,14 +226,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using Dict instead of a data container (this is what you want to use in 99% of the cases)"
+    "### Using Dict instead of a DataContainer (covers 99% of usecases)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By default, SOLT is designed to return `torch` tensors, normalize them and subtract ImageNet mean. If we want SOLT to return an `slt.DataContainer`, we have to specify `return_torch=False` when calling the transforms"
+    "By default, SOLT is designed to return `torch` tensors, normalize them, and subtract ImageNet mean. If we want SOLT to return a `slt.DataContainer`, we have to specify `return_torch=False` when calling the transforms:"
    ]
   },
   {
@@ -281,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can get access to the data within the container as follows:"
+    "We can get access to the data in the container as follows:"
    ]
   },
   {
@@ -297,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The format can also be accessed:"
+    "The format can also be retrieved:"
    ]
   },
   {
@@ -363,9 +363,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Serializing the transformations and streams\n",
+    "## Serializing transforms into `dict`, `yaml` or `json`\n",
     "\n",
-    "We found serialization of the augmentation pipelines to be an important challenge when running experiements. In `SOLT`, we developed the following API, which allows you to conveniently serialize the whole transformation stream into `dict`, `yaml` or `json`"
+    "We found serialization of the augmentation pipelines to be an important challenge when running experiements. In `SOLT`, we developed the API that allows you to conveniently serialize the whole transformation stream into `dict`, `yaml` or `json`:"
    ]
   },
   {
@@ -397,7 +397,7 @@
     "    slt.Flip(axis=1),\n",
     "    slt.Rotate(angle_range=(-90, 90)),\n",
     "])\n",
-    "stream.to_dict() # this converts the pipeline into a dict"
+    "stream.to_dict()  # this converts the pipeline into a dict"
    ]
   },
   {
@@ -447,7 +447,7 @@
     }
    ],
    "source": [
-    "print(stream.to_json()) # to json"
+    "print(stream.to_json())  # to json"
    ]
   },
   {
@@ -492,13 +492,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Implementing own transforms\n",
-    "Let's implament a simple transform, which simply randomly drops one of the image corners. We will not use all the necessary parameter checks and write tests, however, you can see how it is done in the source code or contributing guidelines. To fully understand the implementation, simply read the docstrings:"
+    "## Extending with own transforms\n",
+    "Let's implement a simple transform that randomly zeroes one of the image corners. All transforms must be inherited from `slb.ImageTransform` or `slb.BaseTransform`. In this case, you do not need to worry about how to read and write the data from DataContainer, how to do serialization, etc. To fully understand the implementation details, please, follow the docstrings:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +535,6 @@
     "        every item within a data container. \n",
     "        \n",
     "        \"\"\"\n",
-    "        \n",
     "        self.state_dict['corner'] = np.random.randint(0, 4)\n",
     "        \n",
     "    def _apply_img(self, img, item_settings):\n",
@@ -568,9 +567,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When the transform is imolemented, we can easily use it and rely on the superclasses' implementations. In particular, we do not need to think how about the data / mistake handling / serialization etc.\n",
+    "We are not going to write any tests or do parameter checks for the transform here. To learn how this can be done, please, see the source code or the contributing guidelines.\n",
     "\n",
-    "Alright. Let's try to apply this transform now on a test image. Let's first create the data:"
+    "Once the transform is implemented, it can be used right away. Let's create some data and apply this transform to it:"
    ]
   },
   {
@@ -583,7 +582,7 @@
     "test_img[:2, :2] = 1\n",
     "test_img[:2, -2:] = 1\n",
     "test_img[-2:, :2] = 1\n",
-    "test_img[-2:, -2:] = 1\n"
+    "test_img[-2:, -2:] = 1"
    ]
   },
   {
@@ -655,7 +654,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`SOLT` is using a pattern `registry` for serialization. Whenever a transform is inherited from `slb.BaseTransform` or `slc.Stream`, it gets added to the registry that tracks all the transformations. It is quiate easy to check what is stored in the registry:"
+    "`SOLT` is using a pattern `registry` for serialization. Whenever a transform is inherited from `slb.BaseTransform` or `slc.Stream`, it gets added to the registry that tracks all the available transformations. It is quite easy to see what is stored in the registry:"
    ]
   },
   {
@@ -704,12 +703,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It can be seen that `corner_drop` has been added to the registry, which means that we can easily deserialize it later. This is an example of deserialization"
+    "It can be seen that `corner_drop` has been added to the registry, which means we can also deserialize it later:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,12 +736,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's now look how it works"
+    "Let's check how the deserialized transform works:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
