brain MRI example

--- a/examples/KneeMRI.ipynb
+++ b/examples/KneeMRI.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -177,9 +177,16 @@
     "        ax.imshow(np.ma.masked_array(mask_aug, mask_aug==0), cmap='tab20', alpha=1)\n",
     "    ax.set_xticks([])\n",
     "    ax.set_yticks([])\n",
-    "plt.savefig('results/mri.png', bbox_inches='tight')\n",
+    "plt.savefig('results/knee_mri.png', bbox_inches='tight')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
